--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Герой-->
     <div>
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <h1 class="hero-title">ЕФЕКТИВНI РIШЕННЯ ДЛЯ<br> ВАШОГО БIЗНЕСУ </h1>
             <button type="button" class="button">Замовити послугу</button>
         </section>
     </div>
@@ -37,20 +37,20 @@
         <h2 class="visually-hidden">Особливості</h2>
         <ul class="feature-list">
             <li>
-                <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <h3 class="title-features">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="text-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li>
-                <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <h3 class="title-features">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="text-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li>
-                <h3 class="title">ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                <h3 class="title-features">ПЛАНУВАННЯ</h3>
+                <p class="text-p">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li>
-                <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                <h3 class="title-features">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="text-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
     </section>
@@ -75,28 +75,28 @@
         <ul class="team-list">
             <li>
                 <img src="./img/img.jpg" alt="Ігор Дем'яненко" width="750">
-                <h3 class="title">Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="title-name">Ігор Дем'яненко</h3>
+                <p class="profession">Product Designer</p>
             </li>
             <li>
                 <img src="./img/img(1).jpg" alt="Ольга Рєпіна" width="750">
-                <h3 class="title">Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="title-name">Ольга Рєпіна</h3>
+                <p class="profession">Frontend Developer</p>
             </li>
             <li>
                 <img src="./img/img(2).jpg" alt="Микола Тарасов" width="750">
-                <h3 class="title">Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="title-name">Микола Тарасов</h3>
+                <p class="profession">Marketing</p>
             </li>
             <li>
                 <img src="./img/img(3).jpg" alt="Михайло Єрмаков" width="750">
-                <h3 class="title">Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="title-name">Михайло Єрмаков</h3>
+                <p class="profession">UI Designer</p>
             </li>
         </ul>
     </section>
     <!--Футер-->
-    <footer>
+    <footer class="footer">
         <a href="/" class="logo">
             <span style="color:#2196F3">Web</span><span style="color:#FFFFFF">Studio</span>
         </a>
@@ -105,11 +105,11 @@
                 <li class="adress">
                     м. Київ, пр-т Лесі Українки, 26
                 </li>
-                <li class="contact-details">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="contact-details-footer">info@devstudio.com</a>
                 </li>
-                <li class="contact-details">
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <li>
+                    <a href="tel:+380961111111" class="contact-details-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
