--- a/portfolio.html
+++ b/portfolio.html
@@ -48,54 +48,54 @@
         <ul>
             <li>
                 <img src="./img/techno-website.jpg" alt="Веб-сайт" width="300">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-descr">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/poster-design.jpg" alt="Дизайн" width="300">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p class="project-descr">Дизайн</p>
             </li>
             <li>
                 <img src="./img/restaurant-app.jpg" alt="Додаток" width="300">
-                <h2>Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p class="project-descr">Додаток</p>
             </li>
             <li>
                 <img src="./img/prime-marketing.jpg" alt="Маркетинг" width="300">
-                <h2>Проєкт Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="project-title">Проєкт Prime</h2>
+                <p class="project-descr">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/project-app.jpg" alt="Додаток" width="300">
-                <h2>Проєкт Boxes</h2>
-                <p>Додаток</p>
+                <h2 class="project-title">Проєкт Boxes</h2>
+                <p class="project-descr">Додаток</p>
             </li>
             <li>
                 <img src="./img/inspiration-website.jpg" alt="Веб-сайт" width="300">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="project-title">Inspiration has no Borders</h2>
+                <p class="project-descr">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/limited-design.jpg" alt="Дизайн" width="300">
-                <h2>Видання Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="project-title">Видання Limited Edition</h2>
+                <p class="project-descr">Дизайн</p>
             </li>
             <li>
                 <img src="./img/lab-marketing.jpg" alt="Маркетинг" width="300">
-                <h2>Проєкт LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="project-title">Проєкт LAB</h2>
+                <p class="project-descr">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/business-app.jpg" alt="Додаток" width="300">
-                <h2>Growing Business</h2>
-                <p>Додаток</p>
+                <h2 class="project-title">Growing Business</h2>
+                <p class="project-descr">Додаток</p>
             </li>
         </ul>
     </section>
 
     <!--Футер-->
-    <footer>
+    <footer class="footer">
         <a href="/" class="logo">
             <span style="color:#2196F3">Web</span><span style="color:#FFFFFF">Studio</span>
         </a>
@@ -105,14 +105,14 @@
                     м. Київ, пр-т Лесі Українки, 26
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contact-details">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contact-details-footer">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact-details">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="contact-details-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
     </footer>
-</body>
-
-</html>
+    </body>
+    
+    </html>
