--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
     </div>
     <!--Особливості-->
-    <section class="section">
+    <section class="section-one">
         <h2 class="visually-hidden">Особливості</h2>
         <ul class="feature-list">
             <li>
@@ -55,7 +55,7 @@
         </ul>
     </section>
     <!--Чим ми займаємося-->
-    <section class="section">
+    <section class="section-two">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
             <li>
@@ -70,7 +70,7 @@
         </ul>
     </section>
     <!--Команда-->
-    <section class="section">
+    <section class="section-three">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
             <li>
