--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         <a href="tel:+380961111111" class="contact-details">+38 096 111 11 11</a>
     </header>
 
-    <section>
+    <section class="section-projects">
         <h1 class="visually-hidden">Our Projects</h1>
         <ul>
             <li>
